tests/ui/resolve/issue-55673.stderr
error[E0220]: associated type `Baa` not found for `T`
  --> $DIR/issue-55673.rs:7:8
   |
LL |     T::Baa: std::fmt::Debug,
   |        ^^^ there is a similarly named associated type `Bar` in the trait `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0220`.
